# Projet_C

./: BDD.txt  CMakeLists.txt  Projet C - Pierre EVRARD, Arthur BLANDIN.cbp  Projet C - Pierre EVRARD, Arthur BLANDIN.depend  Projet C - Pierre EVRARD, Arthur BLANDIN.layout  README.md  base  include.c  include.h  log.txt  main  main.c  terminal_functions.c  test  windows_create.c
mysql/: MySQLConfig.cmake
texts/: log.txt
